Bug 75486 - NRWT fails to launch Apple's Windows port of DumpRenderTree/WebKitTestRunner
Summary: NRWT fails to launch Apple's Windows port of DumpRenderTree/WebKitTestRunner
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Windows 7
: P2 Normal
Assignee: Nobody
URL:
Keywords: InRadar, PlatformOnly
Depends on:
Blocks: 38756
  Show dependency treegraph
 
Reported: 2012-01-03 12:37 PST by Adam Roben (:aroben)
Modified: 2012-01-05 11:57 PST (History)
5 users (show)

See Also:


Attachments
Turn DumpRenderTree into a stub .exe launcher and a .dll that contains all the real code (30.00 KB, patch)
2012-01-05 08:00 PST, Adam Roben (:aroben)
sfalken: review+
Details | Formatted Diff | Diff
Turn WebKitTestRunner into a stub .exe launcher and a .dll that contains all the real code (26.75 KB, patch)
2012-01-05 08:13 PST, Adam Roben (:aroben)
sfalken: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2012-01-03 12:37:45 PST
To reproduce:

1. new-run-webkit-tests

All tests "crash". In fact DRT is failing to launch.
Comment 1 Radar WebKit Bug Importer 2012-01-03 12:38:12 PST
<rdar://problem/10638124>
Comment 2 Adam Roben (:aroben) 2012-01-03 12:39:51 PST
Looks like we need to set PATH correctly, like ORWT does. There's even a comment about this in port/win.py!
Comment 3 Adam Roben (:aroben) 2012-01-03 13:04:35 PST
I think we'll also need a way to read strings from the registry, and to convert from Windows paths to Cygwin paths. (webkitpy.common.system.path.cygpath goes in the other direction.)
Comment 4 Adam Roben (:aroben) 2012-01-04 06:53:21 PST
Maybe it would be better to fix this by making DRT/WTR not require any special PATH munging at all, like we plan to do for MiniBrowser (bug 68576) and WinLauncher (bug 68578).
Comment 5 Dirk Pranke 2012-01-04 13:10:40 PST
(In reply to comment #3)
> I think we'll also need a way to read strings from the registry, and to convert from Windows paths to Cygwin paths. (webkitpy.common.system.path.cygpath goes in the other direction.)

Can we get this w/ path._winpath_to_uri and then strip off the 'file:///', or do we need more cygpath magic?
Comment 6 Adam Roben (:aroben) 2012-01-04 13:33:48 PST
(In reply to comment #5)
> (In reply to comment #3)
> > I think we'll also need a way to read strings from the registry, and to convert from Windows paths to Cygwin paths. (webkitpy.common.system.path.cygpath goes in the other direction.)
> 
> Can we get this w/ path._winpath_to_uri and then strip off the 'file:///', or do we need more cygpath magic?

We need more cygpath magic. We need to turn something like this:

C:\Program Files (x86)\Common Files\Apple\Apple Application Support

into this:

/cygdrive/c/Program Files (x86)/Common Files/Apple/Apple Application Support

But I'm going to make DRT/WTR not require all this PATH magic, which will mean we won't need a way to read from the registry or convert to Cygwin paths at all.
Comment 7 Adam Roben (:aroben) 2012-01-05 07:17:58 PST
This affects WebKitTestRunner too.
Comment 8 Adam Roben (:aroben) 2012-01-05 08:00:35 PST
Created attachment 121277 [details]
Turn DumpRenderTree into a stub .exe launcher and a .dll that contains all the real code
Comment 9 Adam Roben (:aroben) 2012-01-05 08:13:37 PST
Created attachment 121281 [details]
Turn WebKitTestRunner into a stub .exe launcher and a .dll that contains all the real code
Comment 10 Eric Seidel (no email) 2012-01-05 10:10:28 PST
Thanks adam. :)
Comment 11 Adam Roben (:aroben) 2012-01-05 11:57:57 PST
Committed r104188: <http://trac.webkit.org/changeset/104188>